tests/stage2/t3_diagnostics/type_errors/unknown_method.fuse
// EXPECTED ERROR:
// unknown extension

data class Foo(val x: Int)

@entrypoint
fn main() {
  val f = Foo(1)
  f.bar()
}
